# tarragon

./: LICENSE  README.md  pyproject.toml
.run/: all tests.run.xml  all to_json's tests for attr types.run.xml  all to_json's tests for base types.run.xml  all to_json's tests for dataclass types.run.xml  all to_json's tests for frozen attr types.run.xml  all to_json's tests for frozen dataclass types.run.xml  all to_json's tests for vanilla types.run.xml  all to_json's tests.run.xml
src/: tarragon.py
tests/: common.py
tests/from_json/base_types/: test_from_json_base_types.py
tests/from_json/custom_types/attr/: test_from_json_custom_types_attr.py
tests/from_json/custom_types/dataclass/: test_from_json_custom_types_dataclass.py
tests/from_json/custom_types/frozen_attr/: test_from_json_custom_types_frozen_attr.py
tests/from_json/custom_types/frozen_dataclass/: test_from_json_custom_types_frozen_dataclass.py
tests/from_json/custom_types/vanilla/: test_from_json_custom_types_vanilla.py
tests/model/: model.py
tests/model/attr/: model.py
tests/model/attr/foo/: model.py
tests/model/dataclass/: model.py
tests/model/dataclass/foo/: model.py
tests/model/foo/: model.py
tests/model/foo/bar/: model_too.py
tests/model/frozen_attr/: model.py
tests/model/frozen_attr/foo/: model.py
tests/model/frozen_dataclass/: model.py
tests/model/vanilla/: model.py
tests/model/vanilla/foo/: model.py
tests/to_json/: common.py  model_expected.py  test_tarragon.py
tests/to_json/base_types/: test_to_json_base_types.py
tests/to_json/custom_types/: model_expected.py
(+11 files in other folders)
