[project]
name = "tarragon"
version = "0.1.0rc0"
description = "Text analogue of dill library"
authors = [
    { name = "pyizi", email = "pyizi@proton.me" }
]
readme = "README.md"
license = "AVL v1.0"
requires-python = ">=3.12"
dependencies = [
]

[[tool.poetry.source]]
name = "pypi"

[[tool.poetry.source]]
# Only "pypi" is default, known and without url
name = "testpypi-publish"
url = "https://test.pypi.org/legacy/"

[tool.poetry.urls]
# Custom project links
Repository = "https://github.com/pyizi/tarragon"
License = "https://github.com/pyizi/tarragon?tab=License-1-ov-file"

[tool.poetry.dependencies]
dill = "0.3.9"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"
assertpy = "1.1"
pytest-xdist = "3.6.1"
attrs = "25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
